@@ -199,14 +199,15 @@ function agent_changed_by_multiple_agents (event, id_agent, selected) {
 	}
 	
 	jQuery.post (homedir + '/ajax.php', 
-		{"page": "operation/agentes/ver_agente",
-		"get_agent_modules_json_for_multiple_agents": 1,
-		"id_agent[]": idAgents,
-		"all": find_modules,
-		"custom_condition": custom_condition,
-		"selection_mode": selection_mode,
-		"serialized": serialized,
-		"id_server": id_server
+		{
+			"page": "operation/agentes/ver_agente",
+			"get_agent_modules_json_for_multiple_agents": 1,
+			"id_agent[]": idAgents,
+			"all": find_modules,
+			"custom_condition": custom_condition,
+			"selection_mode": selection_mode,
+			"serialized": serialized,
+			"id_server": id_server
 		},
 		function (data) {
 			$('#module').empty ();
@@ -218,17 +219,30 @@ function agent_changed_by_multiple_agents (event, id_agent, selected) {
 					noneText = 'None';
 				}
 				
-				$('#module').append ($('<option></option>').html (noneText).attr ("None", "").attr('selected', true));
+				$('#module')
+					.append ($('<option></option>')
+						.html(noneText)
+						.attr ("None", "")
+						.attr('selected', true));
 				
 				return;
 			}
 			
 			if (typeof($(document).data('text_for_module')) != 'undefined') {
-				$('#module').append ($('<option></option>').html ($(document).data('text_for_module')).attr("value", 0).attr('selected', true));
+				$('#module')
+					.append ($('<option></option>')
+						.html ($(document)
+						.data('text_for_module'))
+						.attr("value", 0)
+						.attr('selected', true));
 			}
 			else {
 				if (typeof(data['any_text']) != 'undefined') {
-					$('#module').append ($('<option></option>').html (data['any_text']).attr ("value", 0).attr('selected', true));
+					$('#module')
+						.append ($('<option></option>')
+							.html (data['any_text'])
+							.attr ("value", 0)
+							.attr('selected', true));
 				}
 				else {
 					var anyText = $("#any_text").html(); //Trick for catch the translate text.
@@ -237,14 +251,24 @@ function agent_changed_by_multiple_agents (event, id_agent, selected) {
 						anyText = 'Any';
 					}
 					
-					$('#module').append ($('<option></option>').html (anyText).attr ("value", 0).attr('selected', true));
+					$('#module')
+						.append ($('<option></option>')
+							.html (anyText)
+							.attr ("value", 0)
+							.attr('selected', true));
 				}
 			}
 			jQuery.each (data, function (i, val) {
-						s = js_html_entity_decode(val);
-						$('#module').append ($('<option></option>').html (s).attr ("value", i));
-						$('#module').fadeIn ('normal');
-						});
+					s = js_html_entity_decode(val);
+					
+					$('#module')
+						.append ($('<option></option>')
+							.html (s)
+							.attr ("value", i)
+							.attr("title", i));
+					
+					$('#module').fadeIn ('normal');
+				});
 			if (selected != undefined)
 				$('#module').attr ('value', selected);
 			$('#module').css ("width", "auto");
